// Protobuf specification for the Apalache TransitionExplorer

syntax = "proto3";

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "at.forsyte.apalache.shai.v1";
option java_outer_classname = "TransExplorerProto";
option objc_class_prefix = "TEP";

package shai;

service TransExplorer {
  rpc OpenConnection (ConnectRequest) returns (Connection);
  // TODO rpc Terminate (TerminateRequest) returns (TerminationReply) {}
  rpc LoadModel(LoadModelRequest) returns (UninitializedModel);
}

message ConnectRequest {
}

message Connection {
  string id = 1;
}

message LoadModelRequest {
  string conn = 1;
  string spec = 2;
  repeated string aux = 3;
}

message UninitializedModel {
  google.protobuf.Struct spec = 1;
}
